# quaternion

./: CMakeLists.txt  README.md  quaternion.cpp  quaternion.h  quaternion.hpp
tests/: quat_tsts.cpp  test_quaternion.cpp  test_quaternion2.cpp
